--- a/UI/styles.css
+++ b/UI/styles.css
@@ -66,16 +66,16 @@ li {
 input {
     outline: none;
     border: none;
-    
+
 }
 
-.input_container{
+.input_container {
     padding: 1rem;
     border-radius: var(--radius);
     margin: 1rem 2rem;
-    color:var(--gray);
+    color: var(--gray);
     max-height: 21rem;
-    background-color:var(--white);
+    background-color: var(--white);
 }
 
 
@@ -104,6 +104,10 @@ input {
 
 }
 
+.links {
+    color: var(--primary);
+}
+
 hr {
     border: none;
     background-color: var(--gray);
@@ -113,6 +117,11 @@ hr {
 h1 {
     font-size: 1.8rem;
     font-weight: 500;
+}
+
+label {
+    margin: 0 2rem;
+    text-align: start;
 }
 
 /******************************buttons************************* */
@@ -166,6 +175,11 @@ button {
     max-height: 22rem;
     min-width: 25rem;
     flex-direction: column;
+}
+
+.submit {
+    margin: 2rem auto;
+
 }
 
 
@@ -247,6 +261,20 @@ header {
 .reset {
     margin-left: 1rem;
     vertical-align: middle;
+}
+
+/******************************registration************************** */
+
+.error_container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.form_enter {
+    margin: 4rem auto;
+    text-align: center;
+
 }
 
 /******************************twits************************** */
@@ -341,6 +369,17 @@ header {
     margin-right: 2rem;
 }
 
+.login_textarea {
+    padding: 1rem 3.2rem;
+    border-radius: 1rem;
+    background: url(images/pers.png) no-repeat 8px;
+
+}
+
+.pass_textarea {
+    background: url(images/key.png) no-repeat 8px;
+}
+
 /******************************twits************************** */
 
 
@@ -428,7 +467,7 @@ header {
     color: var(--gray);
 }
 
-.none{
+.none {
     position: relative;
     text-align: center;
 }
