--- a/UI/styles.css
+++ b/UI/styles.css
@@ -120,7 +120,7 @@ h1 {
 }
 
 label {
-    margin: 0 2rem;
+    margin: 0 3rem;
     text-align: start;
 }
 
@@ -143,6 +143,14 @@ button {
     background-color: var(--primary);
 }
 
+.btn{
+    padding: 0.4rem 0.6rem;
+    border-radius: 6px;
+    color:var(--white);
+    background-color:var(--gray);
+    margin: 1rem 2rem;
+}
+
 
 .btn_send {
     padding: 0.3rem 0.6rem;
@@ -150,6 +158,7 @@ button {
     border-radius: 6px;
 
 }
+
 
 .twit_back {
     background-color: transparent;
@@ -164,6 +173,20 @@ button {
     min-height: 100vh;
 }
 
+.modal{
+    right: 1%;
+    background-color:var(--white);
+    padding: 2rem;
+    border-radius:4px;
+    border: 0.2px solid;
+    position: fixed;
+    text-align: center;
+}
+
+.modal:target {
+    /* opacity: 1;  */
+	pointer-events: auto; /* элемент видим для событий мыши */
+}
 
 
 /******************************filter************************** */
@@ -193,6 +216,8 @@ header {
     box-shadow: 0px 5px 10px 0px rgba(0, 0, 0, 0.11);
     padding: 30px 100px;
 }
+
+
 
 
 .header_user {
